--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-aiwriter": "^1.0.0",
+    "react-animated-cursor": "^2.11.2",
     "react-dom": "^18",
     "react-type-animation": "^3.2.0",
     "rehype": "^13.0.1",
