--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-aiwriter": "^1.0.0",
     "react-animated-cursor": "^2.11.2",
     "react-dom": "^18",
+    "react-parallax": "^3.5.1",
     "react-type-animation": "^3.2.0",
     "rehype": "^13.0.1",
     "remark": "^15.0.1",
