--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@next/mdx": "^14.2.5",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-context-menu": "^2.2.6",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.0",
@@ -21,7 +22,7 @@
     "@react-three/drei": "^9.109.2",
     "@react-three/fiber": "^8.16.8",
     "@react-three/postprocessing": "^2.16.2",
-    "@reduxjs/toolkit": "^2.2.0",
+    "@reduxjs/toolkit": "^2.6.1",
     "@types/mdx": "^2.0.13",
     "@types/three": "^0.167.1",
     "class-variance-authority": "^0.7.0",
@@ -38,8 +39,9 @@
     "react-aiwriter": "^1.0.0",
     "react-animated-cursor": "^2.11.2",
     "react-dom": "^18",
+    "react-icons": "^5.5.0",
     "react-parallax": "^3.5.1",
-    "react-redux": "^9.1.0",
+    "react-redux": "^9.2.0",
     "react-type-animation": "^3.2.0",
     "rehype": "^13.0.1",
     "remark": "^15.0.1",
